Feature: use ui package in app package

--- a/app/package.json
+++ b/app/package.json
@@ -12,5 +12,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "ui": "workspace:ui"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.4"
   }
 }
