--- a/ui/package.json
+++ b/ui/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ui",
   "version": "0.1.0",
-  "main": "components/index.js",
-  "module": "components/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "build": "node scripts/build.js && tsc components/index.ts"
+    "build": "node scripts/build.js && tsc --project tsconfig.json",
+    "postinstall": "build",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
