Refactor: change script name

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test:test": "yarn workspace ui test",
+    "test:ui": "yarn workspace ui test",
     "test:storybook": "yarn workspace ui storybook",
     "fix": "yarn fix:lint && yarn fix:format",
     "fix:lint": "yarn eslint --fix",
