--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "build": "node scripts/build.js && tsc --project tsconfig.json",
-    "postinstall": "build",
+    "postinstall": "yarn run build",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
