--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "17.0.2",
+    "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@types/testing-library__react": "^10.2.0",
     "@yarnpkg/esbuild-plugin-pnp": "^1.0.0-rc.2",
@@ -40,5 +41,9 @@
     "react-dom": "17.0.2",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "react-is": "^17.0.2",
+    "styled-components": "^5.2.3"
   }
 }
