--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -14,6 +14,6 @@
     "emitDeclarationOnly": true,
     "outDir": "dist"
   },
-  "exclude": ["node_modules"],
-  "include": ["src/**/*", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts"],
+  "include": ["src/**/*"]
 }
