--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "tiny-glob": "^0.2.8",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
