--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "extends": "../tsconfig.base.json",
-  "declaration": true,
-  "emitDeclarationOnly": true,
   "compilerOptions": {
     "module": "esnext",
     "jsx": "react",
     "noEmit": false,
     "sourceMap": true,
-    "declaration": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "isolatedModules": false,
+    "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "dist"
   },
-  "exclude": ["node_modules", "**/*.test.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.tsx", "**/*.test.ts"],
   "include": ["src/**/*"]
 }
