--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "build": "node scripts/build.js && tsc --project tsconfig.json",
-    "postinstall": "yarn run build",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "build": "yarn clean && node scripts/build.js && tsc --project tsconfig.build.json"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -45,6 +44,7 @@
   },
   "dependencies": {
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "styled-normalize": "^8.0.7"
   }
 }
