--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -12,6 +12,6 @@
     "emitDeclarationOnly": true,
     "outDir": "dist"
   },
-  "exclude": ["node_modules", "dist", "**/*.test.tsx", "**/*.test.ts"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*"]
 }
