Feature: create basic input password component

--- a/ui/package.json
+++ b/ui/package.json
@@ -21,8 +21,11 @@
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/dom": "^7.30.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/prop-types": "^15.7.3",
