--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "react-is": "^17.0.2",
+    "react-use": "^17.2.4",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7"
   }
