--- a/ui/package.json
+++ b/ui/package.json
@@ -47,11 +47,9 @@
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
-  "peerDependencies": {
-    "styled-components": "^5.2.3"
-  },
   "dependencies": {
     "react-is": "^17.0.2",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "styled-components": "^5.2.3"
   }
 }
