--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -4,7 +4,7 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "ignore": ["**/*.test.ts", "**/*.test.tsx"],
+  "ignore": ["**/*.test.ts", "**/*.test.tsx", "**/*.stories.tsx"],
   "plugins": [
     [
       "styled-components",
