--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "next": "10.2.0",
@@ -16,10 +17,19 @@
     "ui": "workspace:ui"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41",
+    "@babel/runtime": "^7.14.0",
+    "@testing-library/dom": "^7.30.4",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
+    "@types/testing-library__jest-dom": "^5.9.5",
+    "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.2.4"
   }
 }
