--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
 }
