--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "workspaces": [
     "ui",
-    "ui-v2",
     "eslint-config",
     "app"
   ],
@@ -29,6 +28,7 @@
     "@babel/core": "^7.14.0",
     "@mdx-js/react": "^1.6.22",
     "@storybook/builder-webpack5": "^6.2.9",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.2",
     "typescript": "^4.2.4",
     "webpack-hot-middleware": "^2.25.0"
