--- a/ui/package.json
+++ b/ui/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/prop-types": "^15.7.3",
+    "@types/ramda": "^0.27.40",
     "@types/react": "^17.0.3",
     "@types/react-dom": "17.0.2",
     "@types/styled-components": "^5.1.9",
@@ -60,6 +61,7 @@
     "styled-components": "^5.3.0"
   },
   "dependencies": {
+    "ramda": "^0.27.1",
     "react-is": "^17.0.2",
     "react-use": "^17.2.4"
   }
