--- a/ui/package.json
+++ b/ui/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "ramda": "^0.27.1",
+    "react-hook-form": "^7.8.1",
     "react-is": "^17.0.2",
     "react-use": "^17.2.4"
   }
