--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.9.0",
     "react-is": "^17.0.2",
     "styled-components": "^5.3.0",
     "ui": "workspace:ui"
