--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "@firebase/app": "^0.6.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
